[tool.poetry]
name = "mashey-asteroids"
version = "0.1.0"
description = "mashey coding challenge"
authors = ["Marissa Pagador <marissapagador@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
